# SimpLang

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.cuda  LICENSE  README.md  bench_matmul_large.sl  benchmark_simd_scaling.sh  build.sh  cpp_scalar_baseline.cpp  dev.sh  docker-compose.yml  dump_code.sh  lib1.sl  matmul_baseline.cpp  matmul_host.cpp  run_mlir_tests.sh  run_tests.sh  simdy_full_code.txt  test_include.sl  test_simple_simd.sl
mobilenet_poc/: CMakeLists.txt  TASK_HANDOFF.md  array_param_test.sl  benchmark_comparison.py  benchmark_results.json  extract_weights.py  logits_comparison.py  mobilenet_host_loader.cpp  mobilenet_inference.sl  mobilenet_inference_host.cpp  mobilenet_simple.sl  mobilenet_weights.h  mobilenetv2_clean.sl  mobilenetv2_full.sl  onnx_logits.npy  onnx_to_simplang_clean.py  onnx_to_simplang_full.py  simple_blas_test.cpp  simple_test.cpp  single_layer_mobilenet.py  single_layer_mobilenet.sl  test_runner  test_runner.cpp  test_standalone.cpp
runtime/: CMakeLists.txt
runtime/include/: call_step.hpp  kernel.h  kernel_runner.hpp  simd_types.hpp  sl_main.h  sl_transform.h  slice_runtime.h  source_manager.hpp
runtime/include/profiler/: execution_metrics.hpp  memory_metrics.hpp  profiler.hpp  trace_events.hpp
runtime/src/: gpu_runtime.cpp  host.cpp  kernel_runtime.cpp
runtime/src/kernel_debugger/: breakpoint.cpp  call_stack.cpp  call_step.cpp  command_processor.cpp  config.cpp  debug_events.cpp  debug_loop.cpp  event_logger.cpp  kernel_debugger.cpp  memory_tracker.cpp  source_manager.cpp  ui_helper.cpp
runtime/src/profiler/: execution_metrics.cpp  memory_metrics.cpp  profiler.cpp  trace_events.cpp
runtime/src/tools/: kernel_profiler.cpp
simptensor/: CMakeLists.txt  TENSOR_CHECKPOINT.md  pytorch_benchmark.py  tensor_core.sl  tensor_perf.sl  tensor_perf_host.cpp  test_tensor_basic.sl  test_tensor_basic_host.cpp
simptensor/benchmarks/: bench_attn_v_matmul.sl  bench_attn_v_matmul_noinit.sl  bench_attn_v_matmul_runner.cpp  bench_attn_v_noinit_runner.cpp  bench_attn_v_small.sl  bench_f64_multi.cpp  bench_i8_i16_multi.cpp  bench_int4_matmul.sl  bench_int4_matmul_runner.cpp  bench_int8_matmul.sl  bench_int8_matmul_multicore.cpp  bench_int8_matmul_omp_runner.cpp  bench_int8_matmul_parallel.sl  bench_int8_matmul_partial.sl  bench_int8_matmul_runner.cpp  bench_int8_matmul_runner_v2.cpp  bench_int8_numpy.py  bench_int8_parallel_runner.cpp  bench_int8_tflite.py  bench_int8_tflite_real.py  bench_llama32_attention.sl  bench_llama32_attention_runner.cpp  bench_llama32_e2e.sl  bench_llama32_e2e_runner.cpp  bench_matmul.sl  bench_matmul_runner.cpp  bench_memory_ops.sl  bench_memory_ops_native.cpp  bench_memory_ops_runner.cpp  bench_numpy_all_types.py  bench_numpy_i8_i16.py  bench_prefill_matmul.sl  bench_prefill_matmul_runner.cpp  bench_qk_matmul.sl  bench_qk_matmul_runner.cpp  bench_qkv_only.sl  bench_qkv_only_runner.cpp  bench_scatter_gather.sl  bench_scatter_gather_native.cpp  bench_scatter_gather_runner.cpp  (+5 more)
simptensor/benchmarks/int16/: bench_elementwise_ops.sl  bench_rmsnorm_i16_i16.sl  bench_rmsnorm_i16_runner.cpp  bench_silu_i16_i16.sl  bench_silu_i16_runner.cpp  bench_silu_i16_v2.sl  bench_silu_v2_runner.cpp  bench_softmax_i16_runner.cpp  bench_softmax_i32_i16.sl  bench_softmax_i32_out.sl  bench_softmax_i32_runner.cpp  bench_softmax_v2.sl  bench_softmax_v2_runner.cpp
simptensor/benchmarks/int8/: bench_attention_batched_i8.sl  bench_attention_batched_runner.cpp  (+4 more)
simptensor/tests/: bench_vnni_throughput.cpp  run_vnni_tests.sh  test_axis_reductions.sl  test_axis_reductions_host.cpp  test_axis_simple.sl  test_axis_verysimp.sl  test_basic.sl  test_basic_host.cpp  test_elementwise.sl  test_elementwise_host.cpp  test_highd.sl  test_highd_binary_ops.sl  test_highd_binary_ops_host.cpp  test_highd_host.cpp  test_matmul_dot.sl  test_memory_ops.sl  test_memory_ops_host.cpp  test_reductions.sl  test_reductions_host.cpp  test_scatter_gather.sl  test_scatter_gather_host.cpp  test_vnni_availability.cpp  test_vnni_correctness.cpp
src/: CMakeLists.txt  ast.cpp  avx512_backend.cpp  codegen.cpp  codegen.hpp  init.c  lexer.l  logger.cpp  main.cpp  main.cpp.bak  parser.y  parser.y.bak  simd_interface.cpp  simd_ops.cpp  type_inference.cpp
src/ast/: ast_utils.cpp  ast_utils.hpp
src/common/: cpuid.c  cpuid.h  dispatch.h
src/mlir/: CMakeLists.txt  Passes.cpp  PromoteLargeAllocaToHeap.cpp  PromoteLargeAllocaToHeap.h  cache_info.cpp  mlir_codegen.cpp  mlir_pipeline.cpp  simp_dialect.cpp  simp_ops.cpp  simp_types.cpp
src/passes/: ProfilingPass.cpp  ProfilingPass.hpp
src/scalar/: kernels_f32.c
tensor/: CMakeLists.txt  README.md
tensor/core/: tensor_core.sl  tensor_ops.sl  tensor_types.sl
tensor/tests/: run_tensor_tests.sh  test_tensor_matrix.sl  test_tensor_performance.sl  test_tensor_types.sl
tests/: CMakeLists.txt  arm_validation.sl  bench_f32_annotated.sl  bench_f32_annotated_runner.cpp  bench_gpu_4k.sl  bench_gpu_f32_matmul.sl  bench_gpu_f32_matmul_runner.cpp  bench_gpu_matmul.sl  bench_gpu_matmul_only.sl  bench_gpu_matmul_only_runner.cpp  bench_gpu_matmul_runner.cpp  bench_gpu_sizes.sl  bench_gpu_sizes_runner.cpp  bench_int8_vnni_annotated.sl  bench_matmul_sweep_runner.cpp  gate_annotations.sl  gate_annotations_runner.cpp  kernel.version  perf_array.sl  perf_array_host.cpp  perf_array_stress.sl  perf_simd.cpp  perf_simd.sl  perf_simd_scalar.sl  perf_test.sl  perf_test_host.cpp  simpblas_test.cpp  test_annotations.sl  test_arithmetic.sl  test_arithmetic_host.cpp  test_array_comprehensive.sl  test_array_comprehensive_host.cpp  test_baseline_perf.sl  test_baseline_perf_host.cpp  test_basic_static_types.sl  test_bitwise.sl  test_bitwise_host.cpp  test_comments.sl  test_composed_annotations.sl  test_composed_annotations_runner.cpp  (+32 more)
tests/benchmark/: CMakeLists.txt  run_scalar_benchmark.sh  test_scalar_benchmark.py  test_scalar_benchmark.sl
tests/debug_tests/: CMakeLists.txt  debug_test_runner.cpp  test_debug.sl  test_simd_debug.sl
tests/mlir/: CMakeLists.txt  test_lowering.cpp  test_simp_dialect.cpp
(+248 files in other folders)
